src/objects/BPA_Call__c.object
<CustomObject>
    <description>VMO - BPA Call</description>
    <fields>
        <fullName>Action_Obligation__c</fullName>
        <description>The amount that is obligated or de-obligated by this transaction.</description>
        <inlineHelpText>Enter the net amount of funds (in dollars and cents) obligated or de-obligated by this transaction. If the net amount is zero, enter zero. If the net amount is a de-obligation, enter a minus sign in addition to the net amount.</inlineHelpText>
        <label>Action Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alaskan_Native_Corporation__c</fullName>
        <formula>BPA_Name__r.Alaskan_Native_Corporation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alaskan Native Corporation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_ACT_PDN__c</fullName>
        <label>Pegasys Doc. #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Actual__c</fullName>
        <label>Award - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <inlineHelpText>Must be of type: BPA Call</inlineHelpText>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BPA Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Name__c</fullName>
        <label>BPA Name</label>
        <referenceTo>BPA__c</referenceTo>
        <relationshipLabel>BPA Calls</relationshipLabel>
        <relationshipName>BPA_Calls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Base_and_All_Options__c</fullName>
        <description>It is the mutually agreed upon total contract or order value including all options (if any). For Indefinite Delivery Vehicles, the estimated value for all orders expected to be placed against the vehicle. For modifications, the change (positive or negative, if any) in the mutually agreed upon total contract value.It is the mutually agreed upon total contract or order value including all options (if any). For Indefinite Delivery Vehicles, the estimated value for all orders expected to be placed against the vehicle. For modifications, the change (positive
or negative, if any) in the mutually agreed upon total contract value.</description>
        <inlineHelpText>Enter the mutually agreed upon total estimated contract or order value for new awards, indefinite delivery vehicles or modifications.</inlineHelpText>
        <label>Base and all Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_and_Exercised__c</fullName>
        <description>The contract value for the base contract and any options that have been exercised.</description>
        <inlineHelpText>The contract value for the base contract and any options that have been exercised.</inlineHelpText>
        <label>Base and Exercised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COR__c</fullName>
        <label>COR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Business_Size_Determination__c</fullName>
        <description>The Contracting Officer&apos;s determination of whether the selected contractor meets the small business size standard for award to a small business for the NAICS code that is applicable to the contract.</description>
        <formula>BPA_Name__r.CO_Business_Size_Determination__c</formula>
        <inlineHelpText>The Contracting Officer&apos;s determination of whether the selected contractor meets the small business size standard for award to a small business for the NAICS code that is applicable to the contract.</inlineHelpText>
        <label>CO Business Size Determination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO__c</fullName>
        <label>Contract Officer (CO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS__c</fullName>
        <label>Contract Specialist (CS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Agency_Code__c</fullName>
        <description>The code for the agency of the contracting office that executed or is otherwise responsible for the transaction.</description>
        <inlineHelpText>Enter the code that identifies the agency of the contracting office.</inlineHelpText>
        <label>Contract Agency Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Office_Code__c</fullName>
        <description>The agency supplied code of the contracting office that executes the transaction.</description>
        <inlineHelpText>If the default code is not appropriate, enter the code for the contracting office that executed or is otherwise responsible for the transaction.</inlineHelpText>
        <label>Contract Office Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Officer_CO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Officer (CO) Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BPA Calls (Contract Officer (CO))</relationshipLabel>
        <relationshipName>BPA_Call_ContractOfficer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Officer_Representative_COR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracting Officer Representative</description>
        <inlineHelpText>Contracting Officer Representative (COR)</inlineHelpText>
        <label>COR Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BPA Calls (COR)</relationshipLabel>
        <relationshipName>BPA_Calls_COR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Specialist_CS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Specialist (CS) Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BPA Calls (Contract Specialist (CS))</relationshipLabel>
        <relationshipName>BPA_Calls_ContractSpecialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Completion_Date__c</fullName>
        <description>The completion date of the base contract plus options that have been exercised.</description>
        <inlineHelpText>The completion date of the base contract plus options that have been exercised.</inlineHelpText>
        <label>Current Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_COCACQ_COPIER_CO__c</fullName>
        <label>Date Sent to Contracting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Requirement__c</fullName>
        <description>A brief description of the contract or award.</description>
        <inlineHelpText>Enter a brief description of the contract or award.</inlineHelpText>
        <label>Description of Requirement</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date that the parties agree will be the starting date for the contract&apos;s requirements. The Effective Date cannot be earlier than the Signed Date on the base document.</description>
        <inlineHelpText>Enter the effective date agreed to by the parties.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emerging_Small_Business__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is an Emerging Small Business Organization or not. It can be derived from the SAM data element, &apos;Business Types&apos;.</description>
        <formula>BPA_Name__r.Emerging_Small_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is an Emerging Small Business Organization or not. It can be derived from the SAM data element, &apos;Business Types&apos;.</inlineHelpText>
        <label>Emerging Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extent_Compt__c</fullName>
        <description>A code that represents the competitive nature of the contract.</description>
        <inlineHelpText>A code that represents the competitive nature of the contract.</inlineHelpText>
        <label>Extent Compt.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fair_Opportunity__c</fullName>
        <description>Report this code when awarding a non competitive task order or delivery order exceeding $2500.00 against an IDIQ contract.</description>
        <inlineHelpText>Report this code when awarding a non competitive task order or delivery order exceeding $2500.00 against an IDIQ contract.</inlineHelpText>
        <label>Fair Opportunity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Agency_Code__c</fullName>
        <description>The code for the agency that provided the preponderance of the funds obligated by this transaction.</description>
        <inlineHelpText>If funding for this transaction was provided by another agency, enter the code that identifies the agency that provided the preponderance of the obligated funds.</inlineHelpText>
        <label>Fund Agency - Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Office_Code__c</fullName>
        <description>The funding agency provided code that identifies the office (or other organizational entity) that provided the preponderance of funds. If the Funding Agency is a non-DoD agency, the code is defined by the agency. If the Funding Agency is a DoD agency, the code is the DoD Activity Address Code (DODAAC).</description>
        <inlineHelpText>Obtain the code to report from the office (or other organizational entity) that is funding this transaction.</inlineHelpText>
        <label>Fund Office - Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUBZone_Firm__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is a Historically Underutilized Business Zone (HUBZone) Firm or not. It can be derived from the SAM data element, &apos;Business Types&apos;</description>
        <formula>BPA_Name__r.HUBZone_Firm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is a Historically Underutilized Business Zone (HUBZone) Firm or not.</inlineHelpText>
        <label>HUBZone Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Option_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the Award includes Option Years</description>
        <inlineHelpText>Does this Award include Option Years?</inlineHelpText>
        <label>Has Option Years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Innovative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Innovative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Priorities__c</fullName>
        <label>Key Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Sign-On</fullName>
                </value>
                <value>
                    <fullName>Cloud First</fullName>
                </value>
                <value>
                    <fullName>Enterprise Information &amp; Data Management</fullName>
                </value>
                <value>
                    <fullName>Digital Services</fullName>
                </value>
                <value>
                    <fullName>Records Management</fullName>
                </value>
                <value>
                    <fullName>IT Cyber-Security</fullName>
                </value>
                <value>
                    <fullName>OpenSource Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limited_Sources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limited Sources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_of_Goods__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is a Manufacturer of Goods or not.</description>
        <formula>BPA_Name__r.Manufacturer_of_Goods__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is a Manufacturer of Goods or not.</inlineHelpText>
        <label>Manufacturer of Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minority_Owned_Business__c</fullName>
        <description>List characteristic of the contractor such as whether the selected contractor is a &apos;Minority Owned Business&apos; or not</description>
        <formula>BPA_Name__r.Minority_Owned_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List characteristic of the contractor such as whether the selected contractor is a &apos;Minority Owned Business&apos; or not</inlineHelpText>
        <label>Minority Owned Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_Critical__c</fullName>
        <label>Mission Critical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modification_Number__c</fullName>
        <description>An identifier issued by an agency that uniquely identifies one modification for one contract, agreement, order, etc.</description>
        <inlineHelpText>When reporting modifications to contracts, agreements, or orders, report the modification number assigned by the reporting contracting office. For any given PIID, all Modification Numbers must be unique.</inlineHelpText>
        <label>Mod #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>The North American Industry Classification System (NAICS) codes designate major sectors of the economies of Mexico, Canada, and the United States.</description>
        <inlineHelpText>Report the code that was used in the solicitation.</inlineHelpText>
        <label>NAICS Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Descrip__c</fullName>
        <label>NAICS Descrip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark the record as Non-IT to identify this record as non-IT</inlineHelpText>
        <label>Non-IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_or_Comments__c</fullName>
        <label>Notes or Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_offers__c</fullName>
        <description>The number of actual offers/bids received in response to the solicitation.</description>
        <inlineHelpText>The number of actual offers/bids received in response to the solicitation.</inlineHelpText>
        <label># of offers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_than_Full_and_Open_Competition__c</fullName>
        <description>Enter the code that most appropriately defines the reason the action was not competed.</description>
        <inlineHelpText>Enter the code that most appropriately defines the reason the action was not competed.</inlineHelpText>
        <label>Other than Full &amp; Open Competition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIID_Ref_Contract__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>PIID + Ref. Contract</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PR_Amount__c</fullName>
        <label>PR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PR_Number__c</fullName>
        <label>PR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Review_Completed_over_SAT__c</fullName>
        <label>PR Review Completed over SAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PR_Review_Completed_under_SAT__c</fullName>
        <label>PR Review Completed under SAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSC_Code__c</fullName>
        <description>The code that best identifies the product or service procured. Codes are defined in the Product and Service Codes Manual.</description>
        <inlineHelpText>The code that best identifies the product or service procured. Codes are defined in the Product and Service Codes Manual.</inlineHelpText>
        <label>PSC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSC_Descrip__c</fullName>
        <description>A description of the product or service designated by the product code.</description>
        <inlineHelpText>A description of the product or service designated by the product code.</inlineHelpText>
        <label>PSC Descrip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Manufacture__c</fullName>
        <description>Represents whether the end products procured by the contract are manufactured inside or outside the U.S. in accordance with the Buy American Act (see FAR 25.1) and any exceptions or reasons for waivers employed.</description>
        <inlineHelpText>Represents whether the end products procured by the contract are manufactured inside or outside the U.S. in accordance with the Buy American Act (see FAR 25.1) and any exceptions or reasons for waivers employed.</inlineHelpText>
        <label>Place of Manu.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Action_Lead_Time__c</fullName>
        <formula>Effective_Date__c - Date_Sent_to_COCACQ_COPIER_CO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PALT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBA_Order_ID_Number__c</fullName>
        <label>RBA Order ID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Modification__c</fullName>
        <description>The type of modification to an award or IDV performed by this transaction.</description>
        <inlineHelpText>Select the code that most accurately describes the reason this modification was awarded.</inlineHelpText>
        <label>Reason for Mod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Certified_Small_Disadvantaged_Bus__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is &apos;Self-Certified Small Disadvantaged Business&apos; or not.</description>
        <formula>BPA_Name__r.Self_Certified_Small_Disadvantaged_Bus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is &apos;Self-Certified Small Disadvantaged Business&apos; or not.</inlineHelpText>
        <label>Self-Certified Small Disadvantaged Bus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Disabled_Veteran_Owned_Small_Bus__c</fullName>
        <formula>BPA_Name__r.Service_Disabled_Veteran_Owned_Small_Bus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Disabled Veteran Owned Small Bus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Disadvantaged_Business__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is a &apos;Small Disadvantaged Business Organization&apos; or not.</description>
        <formula>BPA_Name__r.Small_Disadvantaged_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is a &apos;Small Disadvantaged Business Organization&apos; or not.</inlineHelpText>
        <label>Small Disadvantaged Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solicitation_Procedures__c</fullName>
        <description>Report this code for the type of solicitation procedure used.</description>
        <inlineHelpText>Report this code for the type of solicitation procedure used.</inlineHelpText>
        <label>Solicitation Proc.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stratification_Rating_Tracking__c</fullName>
        <label>Stratification Rating Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stratification_Score__c</fullName>
        <formula>IF ( Value_of_Task_Order_50M__c , 20, 0) + 
IF ( Limited_Sources__c , 5, 0 ) + 
IF ( ISBLANK(Key_Priorities__c) , 0, 25) +
IF ( ISBLANK( Mission_Critical__c ) , 0, 25) +
IF ( Innovative__c , 25, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stratification Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stratification_Value__c</fullName>
        <formula>IF ( Stratification_Score__c &lt; 26, &quot;Standard&quot;, IF ( Stratification_Score__c &gt;= 26 &amp;&amp; Stratification_Score__c &lt; 51 , &quot;Sustaining&quot;, IF (Stratification_Score__c &gt;= 51 &amp;&amp; Stratification_Score__c &lt; 76, &quot;Critical&quot;, &quot;Strategic&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The system calculated Stratification Value.</inlineHelpText>
        <label>Stratification Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERP_Number__c</fullName>
        <label>TERP Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Set_Aside__c</fullName>
        <description>The designator for type of set aside determined for the contract action.</description>
        <inlineHelpText>The designator for type of set aside determined for the contract action.</inlineHelpText>
        <label>Type Set Aside</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Completion_Date__c</fullName>
        <description>The estimated or scheduled completion date including the base contract or order and all options (if any) whether the options have been exercised or not.</description>
        <inlineHelpText>The estimated or scheduled completion date including the base contract or order and all options (if any) whether the options have been exercised or not.</inlineHelpText>
        <label>Ultimate Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_of_Task_Order_50M__c</fullName>
        <formula>Base_and_All_Options__c  &gt; 50000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Task Order &gt; 50M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_City__c</fullName>
        <description>The city of the contractor address</description>
        <formula>BPA_Name__r.Vendor_City__c</formula>
        <inlineHelpText>The city of the contractor address</inlineHelpText>
        <label>Vendor City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_DUNS_Number__c</fullName>
        <description>Dun &amp; Bradstreet Data Universal Numbering System organization identification code</description>
        <formula>BPA_Name__r.Vendor_DUNS_Number__c</formula>
        <inlineHelpText>The DUNS number of the contractor. Used as a key to SAM.</inlineHelpText>
        <label>Vendor DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Parent_DUNS_Number__c</fullName>
        <description>The DUNS number of the parent contractor. Used as a key to SAM.</description>
        <formula>BPA_Name__r.Vendor_Parent_DUNS_Number__c</formula>
        <inlineHelpText>The DUNS number of the parent contractor. Used as a key to SAM.</inlineHelpText>
        <label>Vendor Parent DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Parent__c</fullName>
        <formula>BPA_Name__r.Vendor_Parent__c</formula>
        <inlineHelpText>Name of the Parent Vendor</inlineHelpText>
        <label>Vendor Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <description>The state of the contractor address.</description>
        <formula>BPA_Name__r.Vendor_State__c</formula>
        <inlineHelpText>The state of the contractor address.</inlineHelpText>
        <label>Vendor State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Street__c</fullName>
        <description>The street address for a contractor.</description>
        <formula>BPA_Name__r.Vendor_Street__c</formula>
        <inlineHelpText>The street address for a contractor.</inlineHelpText>
        <label>Vendor Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Zip_Code__c</fullName>
        <formula>BPA_Name__r.Vendor_Zip_Code__c</formula>
        <label>Vendor Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Vendor (Account) Name</description>
        <formula>BPA_Name__r.Vendor__r.Name</formula>
        <inlineHelpText>Vendor Name</inlineHelpText>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran_Owned_Small_Business__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is a &apos;Veteran Owned Small Business&apos; or not.</description>
        <formula>BPA_Name__r.Veteran_Owned_Small_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is a &apos;Veteran Owned Small Business&apos; or not.</inlineHelpText>
        <label>Veteran Owned Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Women_Owned_Small_Business__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is a &apos;Women Owned Small Business&apos; or not.</description>
        <formula>BPA_Name__r.Women_Owned_Small_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is a &apos;Women Owned Small Business&apos; or not.</inlineHelpText>
        <label>Women Owned Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X8_a_Program_Participant__c</fullName>
        <description>Characteristic of the contractor such as whether the selected contractor is an &apos;8(a) Program Participant Organization&apos; or not.</description>
        <formula>BPA_Name__r.X8_a_Program_Participant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Characteristic of the contractor such as whether the selected contractor is an &apos;8(a) Program Participant Organization&apos; or not.</inlineHelpText>
        <label>8(a) Program Participant</label>
        <type>Checkbox</type>
    </fields>
    <label>BPA Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>BPA_Name__c</columns>
        <columns>Vendor__c</columns>
        <columns>Base_and_All_Options__c</columns>
        <columns>Base_and_Exercised__c</columns>
        <columns>Stratification_Value__c</columns>
        <columns>Current_Completion_Date__c</columns>
        <columns>Ultimate_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_BPA_Calls</fullName>
        <columns>NAME</columns>
        <columns>BPA_Name__c</columns>
        <columns>Vendor__c</columns>
        <columns>Base_and_All_Options__c</columns>
        <columns>Base_and_Exercised__c</columns>
        <columns>Stratification_Value__c</columns>
        <columns>Current_Completion_Date__c</columns>
        <columns>Ultimate_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BPA_Call__c.BPA_Call</value>
        </filters>
        <label>All Active BPA Calls</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Records</fullName>
        <columns>NAME</columns>
        <columns>BPA_Name__c</columns>
        <columns>Vendor__c</columns>
        <columns>Base_and_All_Options__c</columns>
        <columns>Base_and_Exercised__c</columns>
        <columns>Stratification_Value__c</columns>
        <columns>Current_Completion_Date__c</columns>
        <columns>Ultimate_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BPA_Call__c.Inactive</value>
        </filters>
        <label>All Inactive Records</label>
    </listViews>
    <nameField>
        <label>BPA Call</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BPA Calls</pluralLabel>
    <recordTypes>
        <fullName>BPA_Call</fullName>
        <active>true</active>
        <description>Used for BPA Calls</description>
        <label>BPA Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive</fullName>
        <active>true</active>
        <description>Used for Task Orders and BPA Calls that the VM office does not need to view.</description>
        <label>Inactive</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>